--- a/.github/workflows/issue-output.yml
+++ b/.github/workflows/issue-output.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Issue info
-        run: echo "${{ toJSON() }}"
+        run: echo "${{ toJSON(github) }}"
