test filter events

--- a/.github/workflows/pull-requested.yml
+++ b/.github/workflows/pull-requested.yml
@@ -5,8 +5,8 @@ on:
       - opened
     branches:
       - main
-      - dev-* # dev-some dev-something-else
-      - feat/** # feat/text feat/many/text
+      - 'dev-*' # dev-some dev-something-else
+      - 'feat/**' # feat/text feat/many/text
   workflow_dispatch:
 jobs:
   pr:
