--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,6 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
-        with:
-          node-version: 18
       - name: Install dependencies
         run: npm ci
       - name: Run tests
@@ -23,23 +21,23 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
-        with:
-          node-version: 18
       - name: Install dependencies
         run: npm ci
       - name: Run linter
         run: npm run lint
-  deploy:
+  build:
     needs: [test, lint]
     runs-on: ubuntu-latest
     steps:
       - name: Get code
         uses: actions/checkout@v3
-        with:
-          node-version: 18
       - name: Install dependencies
         run: npm ci
       - name: Build project
         run: npm run build
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
       - name: Deploy to server
         run: echo "Deploy to server"
