add creating artifact

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           name: dist-artifact
           path: |
-            dist
+            build
             package.json
   deploy:
     needs: build
