download artifact in deploy job

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,5 +49,6 @@ jobs:
         with:
           name: dist-artifact
       - name: Output contents
+        run: ls
       - name: Deploy to server
         run: echo "Deploy to server"
