--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,24 +5,24 @@ on:
     branches:
       - deploy
 jobs:
-#  test:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Get code
-#        uses: actions/checkout@v3
-#      - name: Install dependencies
-#        run: npm ci
-#      - name: Run tests
-#        run: npm run test
-#  lint:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Get code
-#        uses: actions/checkout@v3
-#      - name: Install dependencies
-#        run: npm ci
-#      - name: Run linter
-#        run: npm run lint
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm run test
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: Run linter
+        run: npm run lint
   build:
     needs: [test, lint]
     runs-on: ubuntu-latest
