--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
         run: npm ci
       - name: Build project
         run: npm run build
+      - name: Publish JS file name
+        run: find build/static/js/*.js -type f -execdir echo "{}" ";"
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
